# battleship

./: .gitignore  README.md  doxygen_config.m  doxygen_config.m.bak  uml.xmi
battleship/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  application.cpp  application.h  battleship.pro  battleship_controller.cpp  battleship_controller.h  connection.cpp  connection.h  coordinatesystem.cpp  coordinatesystem.h  doc.conf  gamecoordinatesystem.cpp  gameform.cpp  gameform.h  main.cpp  player.cpp  playerform.cpp  playerform.h  setshipsform.cpp  setshipsform.h  settingshipscoordinatesystem.cpp  test_connection.cpp  test_model.cpp  ui_mainwindow.h  view_interface.h
battleship-master/: README.md
battleship-master/Server/: Server.pro  main.cpp  server.cpp  server.h  servergui.cpp  servergui.h  thread.cpp  thread.h
battleship-master/battleship/: battleship.pro  coordinatesystem.h  digitalclock.h  game.cpp  game.h  gamecoordinatesystem.h  gameform.cpp  gameform.h  main.cpp  player.cpp  player.h  playerform.h  setshipsform.cpp  setshipsform.h
battleship/common/: CMakeLists.txt  battleship_observer.h  controller_interface.h  model_interface.h  user_friendly_exception.cpp  user_friendly_exception.h  user_info.cpp  user_info.h
battleship/debug/: moc_gameform.cpp  moc_setshipsform.cpp
battleship/doxygen/html/: annotated.html  battleship__controller_8cpp.html  battleship__controller_8cpp__incl.map  battleship__controller_8cpp__incl.md5  battleship__controller_8h.html  battleship__controller_8h__dep__incl.map  battleship__controller_8h__dep__incl.md5  battleship__controller_8h__incl.map  battleship__controller_8h__incl.md5  battleship__controller_8h_source.html  battleship__model_8cpp.html  battleship__model_8cpp__incl.map  battleship__model_8cpp__incl.md5  battleship__model_8h.html  battleship__model_8h__dep__incl.map  battleship__model_8h__dep__incl.md5  battleship__model_8h__incl.map  battleship__model_8h__incl.md5  battleship__model_8h_source.html  battleship__observer_8h.html  battleship__observer_8h__dep__incl.map  battleship__observer_8h__dep__incl.md5  battleship__observer_8h_source.html  battleship__view_8cpp.html  battleship__view_8cpp__incl.map  battleship__view_8cpp__incl.md5  battleship__view_8h.html  battleship__view_8h__dep__incl.map  battleship__view_8h__dep__incl.md5  battleship__view_8h__incl.map  battleship__view_8h__incl.md5  battleship__view_8h_source.html  classBattleshipController-members.html  classBattleshipController.html  classBattleshipController__coll__graph.map  classBattleshipController__coll__graph.md5  classBattleshipController__inherit__graph.map  classBattleshipController__inherit__graph.md5  classBattleshipObserver-members.html  classBattleshipObserver.html  (+402 more)
battleship/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  (+36 more)
battleship/doxygen/latex/: annotated.tex  battleship__controller_8cpp.tex  battleship__controller_8cpp__incl.md5  battleship__controller_8h.tex  battleship__controller_8h__dep__incl.md5  battleship__controller_8h__incl.md5  battleship__model_8cpp.tex  battleship__model_8cpp__incl.md5  battleship__model_8h.tex  battleship__model_8h__dep__incl.md5  battleship__model_8h__incl.md5  battleship__observer_8h.tex  battleship__observer_8h__dep__incl.md5  battleship__view_8cpp.tex  battleship__view_8cpp__incl.md5  battleship__view_8h.tex  battleship__view_8h__dep__incl.md5  battleship__view_8h__incl.md5  classBattleshipController.tex  classBattleshipController__coll__graph.md5  classBattleshipController__inherit__graph.md5  classBattleshipObserver.tex  classBattleshipObserver__inherit__graph.md5  classConnectionTest.tex  classConnectionTest__coll__graph.md5  classControllerInterface.tex  classControllerInterface__inherit__graph.md5  classDigitalClock.tex  classDigitalClock__coll__graph.md5  classGUI_1_1BattleshipView.tex  classGUI_1_1BattleshipView__coll__graph.md5  classGUI_1_1BattleshipView__inherit__graph.md5  classGUI_1_1CoordinateSystem.tex  classGUI_1_1CoordinateSystem__coll__graph.md5  classGUI_1_1CoordinateSystem__inherit__graph.md5  classGUI_1_1GameCoordinateSystem.tex  classGUI_1_1GameCoordinateSystem__inherit__graph.md5  classGUI_1_1PlayerForm.tex  classGUI_1_1PlayerForm__coll__graph.md5  classGUI_1_1PlayerForm__inherit__graph.md5  (+167 more)
battleship/gui/: CMakeLists.txt  battleship_view.cpp  battleship_view.h  coordinatesystem.cpp  coordinatesystem.h  coordinatesystem.h.autosave  digitalclock.cpp  digitalclock.h  gamecoordinatesystem.cpp  gamecoordinatesystem.h  gameform.cpp  gameform.h  player.cpp  player.h  playerform.cpp  playerform.h  playerform.h.autosave  setshipsform.cpp  setshipsform.h  settingshipscoordinatesystem.cpp  settingshipscoordinatesystem.h
battleship/model/: CMakeLists.txt  battleship_model.cpp  battleship_model.h  communicator.cpp  communicator.cpp.orig  communicator.h  connection.cpp  connection.h  connection_guest.cpp  connection_guest.h  connection_host.cpp  connection_host.h  connection_observer.h  coordinate_system.cpp  coordinate_system.h  game.cpp  game.h  game.h.autosave  game_guest.cpp  game_guest.h  game_host.cpp  game_host.h  player.cpp  player.h  point.cpp  point.h  point.h.autosave  ship.cpp  ship.h  testqobject.cpp  testqobject.h
battleship/rsc/: class_diagramm.xmi
